--- a/part3/phonebook-backend/package.json
+++ b/part3/phonebook-backend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js",
-    "start": "node index.js"
+    "start": "node index.js",
+    "lint": "eslint ."
   },
   "author": "Sohaib Ahmed",
   "license": "ISC",
@@ -17,5 +18,8 @@
     "mongoose": "^6.6.6",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.20"
+  },
+  "devDependencies": {
+    "eslint": "^8.26.0"
   }
 }
