--- a/part4/blog-app/package.json
+++ b/part4/blog-app/package.json
@@ -4,18 +4,22 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --verbose",
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "test": "cross-env NODE_ENV=test jest --verbose --runInBand --forceExit",
+    "start": "cross-env NODE_ENV=production node index.js",
+    "dev": "cross-env NODE_ENV=development nodemon index.js"
   },
   "author": "Sohaib Ahmed",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jest": "^29.2.2",
     "mongoose": "^6.7.0",
     "nodemon": "^2.0.20"
+  },
+  "devDependencies": {
+    "supertest": "^6.3.1"
   }
 }
