--- a/part4/blog-app/package.json
+++ b/part4/blog-app/package.json
@@ -11,11 +11,14 @@
   "author": "Sohaib Ahmed",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "jest": "^29.2.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.0",
     "nodemon": "^2.0.20"
   },
